added the half of the website

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
                 <p class="banner-description">Our agency will give you the best opportunity. We can send you in the world tour. So please tell us, <br> where you want to go.</p>
             </div>
             <div class="banner-inputs">
-                
+                <form class="banner-inputs" action="">
+                    <input class="where" type="" placeholder="Where go">
+                    <select class="when" name="When" id=""></select>
+                    <select class="select" name="" id="">/select>
+                    <input class="find-now" type="button" value="Find Now">
+                </form>
             </div>
         </section>
 
@@ -50,11 +55,83 @@
             </div>
             <div class="our-popular-img">
                 <img src="Images/Rectangle 4.png" alt="">
-
             </div>
         </section>
 
-        
+        <!-- Destination Section -->
+
+        <section class="grid-section">
+                <div class="Destination-header">
+                    <h2 class="prmry-heading">Choose Your Destination</h2>
+                    <p class="prmry-description">Embark on a journey to the enchanting realm of possibilities, where imagination knows no bounds. <br> Picture yourself in a place where the sun kisses the horizon.</p>
+                </div>
+                <div class="grid-img">
+                    <div class="row1">
+                        <img src="Images/Rectangle 5.png" alt="">
+                        <img src="Images/Rectangle 8.png" alt="">
+                    </div>
+                    <div class="row2">
+                        <img src="Images/Rectangle 6.png" alt="">
+                        <img src="Images/Rectangle 7.png" alt="">
+                        <img src="Images/Rectangle 9.png" alt="">
+                    </div>
+                    <div class="row3">
+                        <img src="Images/Rectangle 11.png" alt="">
+                        <img src="Images/Rectangle 10.png" alt="">
+                    </div>
+                </div>
+        </section>
+
+        <!-- Why Choose Us Section -->
+        <section class="why-choose-us">
+                 <div class="why-choose-us-header">
+                 <h2 class="prmry-heading">Why Choose Us</h2>
+                 <p class="prmry-description">Our agency is a trusted agency. We send the people in different places many years. Our experience are long time. <br> We hope we can services you for a long time.</p>
+            </div>
+            <div class="first-line">
+                <div class="hotel">
+                    <img src="Images/hotel 1.jpg" alt="">
+                    <h3 class="why-choose-us-heading">Handpicked Hotels</h3>
+                    <p class="prmry-description-none">
+                        Handpicked Hotels offers a curated collection of exquisite accommodations, ensuring a blend of luxury and personalized experiences. With a discerning eye for unique properties, each hotel is chosen for its distinct charm.</p>
+                </div>
+                <div class="map">
+                    <img src="Images/map 1.jpg" alt="">
+                    <h3 class="why-choose-us-heading">World Class Service</h3>
+                    <p class="prmry-description-none">
+                        Experience world-class service that transcends expectations, where every detail is meticulously attended to. Our commitment to excellence ensures a seamless and memorable journey for every guest. </p>
+                </div>    
+            </div>
+            <div class="price">
+                <img class="price-img" src="Images/price-tag 1.jpg" alt="">
+                <h3 class="why-choose-us-heading">Best Price Guarantee</h3>
+                <p class="prmry-description-none">Our Best Price Guarantee ensures you receive the most competitive rates for your <br> accommodations. If you find a lower price elsewhere, we promise to match it</p>
+            </div>
+        </section>
+
+        <!-- A Simple Perfect Place To Get Lost Section -->
+
+
+        <section class="a-simple-perfect">
+            <div class="simple-dsecription">
+                <h2 class="prmry-heading">A Simple Perfect Place <br> To Get Lost</h2>
+                <p class="prmry-description">Bandarban, with its breathtaking landscapes and serene ambiance, embodies the essence of <br> "A Simple Perfect Place To Get Lost." Surrounded by lush hills</p>
+                <ul class="simple-list">
+                    <li>Nafakhum Waterfall: Among the largest waterfalls in Bangladesh, Nafakhum cascades down a lush green hill.</li>
+                    <br> 
+                    <li>Nilgiri Hills: Known for its panoramic views, Nilgiri provides a stunning vantage point to witness the surrounding valleys and hills.</li>
+                </ul>
+                <input class="prmry-btn" type="button" value="See More">
+            </div>
+            <div class="simple-video">
+                <iframe width="500" height="340" src="https://www.youtube.com/embed/1heeXKUAFyA?si=27E4Mwxr0LIJOXn1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <!-- Newsletter Section -->
+
+        <section class="newsletter"></section>
+
     </main>
     <footer>
 
