finished the main section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
             <div class="banner-inputs">
                 <form class="banner-inputs" action="">
                     <input class="where" type="" placeholder="Where go">
-                    <select class="when" name="When" id=""></select>
-                    <select class="select" name="" id="">/select>
+                    <select class="when" name="When" id="">
+                        <option value="India">India</option>
+                        <option value="Nepal">Nepal</option>
+                    </select>
+                    <select class="select" name="" id="">
+                        <option value="India">India</option>
+                        <option value="Nepal">Nepal</option>
+                    </select>
                     <input class="find-now" type="button" value="Find Now">
                 </form>
             </div>
@@ -130,11 +136,32 @@
 
         <!-- Newsletter Section -->
 
-        <section class="newsletter"></section>
-
+        <section class="newsletter-container">
+            <div class="box">
+                <div class="newsletter-content">
+                    <h4 class="newsletter-heading">Newsletter</h4>
+                    <p class="newsletter-description">Get your daily dose of travel news & tips. <br> Sign up today!</p>
+                </div>
+            <form class="form" action="">
+                <input type="Name" placeholder="Enter your name"> <br>
+                <input type="email" name="Email" id="" placeholder="Enter your email"> <br>
+                <input class="newsletter-btn" type="button" value="Subscribe"> 
+            </form>
+            </div>
+            <div class="newsletter-image">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
+        <section class="footer-section">
+            <div class="footer-description">
+                
+            </div>
+            <div class="footer-icons">
 
+            </div>
+        </section>
     </footer>
 </body>
 </html>
