added the bonus and footer section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoo Travel</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-container">
         <nav class="heading">
             <img src="Images/Group 40071 (2).png" alt="">
             <h1>Zoo <span class="prmry-color">Travel</span></h1>
-            <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800;900&display=swap" rel="stylesheet">
         </nav>
         <nav class="heading-links">
             <a class="prmry-color" href="">Home</a>
@@ -156,11 +156,16 @@
     <footer>
         <section class="footer-section">
             <div class="footer-description">
-                
+                <nav class="heading">
+                    <img src="Images/Group 40071 (2).png" alt="">
+                    <h3 class="footer-header">Zoo <span class="prmry-color">Travel</span></h3>
+                </nav>
+                    <p>Unforgettable journeys with our expertly crafted travel experiences. Your adventure begins with us, <br> where every destination is a story waiting to be written."</p>
             </div>
             <div class="footer-icons">
-
+                <img src="Images/Social.jpg" alt="">
             </div>
+            <p class="last">2017, All Rights Reserved.</p>
         </section>
     </footer>
 </body>
