Finished The Full Website

--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
             </div>
         </section>
 
+        <!-- Deals and Discount section -->
+
+        <section class="deals-container">
+            <div class="deals-header">
+                <h2 class="prmry-heading">Deals & Discounts</h2>
+                <p class="prmry-description">Our Best Deals and Discounts ensures you receive the most competitive rates for your <br> accommodations. If you find a lower price elsewhere, we promise to match it</p>
+            </div>
+            <div class="deals-img">
+                <img src="Images/Group 39.png" alt="">
+                <img src="Images/Group 40.png" alt="">
+                <img src="Images/Group 39.png" alt="">
+            </div>
+
+        </section>
+
         <!-- A Simple Perfect Place To Get Lost Section -->
 
 
