--- a/index.html
+++ b/index.html
@@ -64,90 +64,148 @@
             </div>
         </section>
 
-        <!-- Destination Section -->
+        <!-- Destination Section1 -->
 
-        <section class="grid-section">
-                <div class="Destination-header">
-                    <h2 class="prmry-heading">Choose Your Destination</h2>
-                    <p class="prmry-description">Embark on a journey to the enchanting realm of possibilities, where imagination knows no bounds. <br> Picture yourself in a place where the sun kisses the horizon.</p>
+
+        <section class="choose-your-destination">
+            <div class="destination-text">
+                <h2>Choose Your Destination</h2>
+                <p>Embark on a journey tailored to your desires by selecting from our diverse range of destinations.</p>
+            </div>
+            <div class="destination-image-container">
+                <div class="grid-item1">
+                    <p>Maldives</p>
                 </div>
-                <div class="grid-img">
-                    <div class="row1">
-                        <img src="Images/Rectangle 5.png" alt="">
-                        <img src="Images/Rectangle 8.png" alt="">
-                    </div>
-                    <div class="row2">
-                        <img src="Images/Rectangle 6.png" alt="">
-                        <img src="Images/Rectangle 7.png" alt="">
-                        <img src="Images/Rectangle 9.png" alt="">
-                    </div>
-                    <div class="row3">
-                        <img src="Images/Rectangle 11.png" alt="">
-                        <img src="Images/Rectangle 10.png" alt="">
+                <div class="grid-item2">
+                    <p>Indonesia</p>
+                </div>
+                <div class="grid-item3">
+                    <p>Srilanka</p>
+                </div>
+                <div class="grid-item4">
+                    <p>North America</p>
+                </div>
+                <div class="grid-item5">
+                    <p>Kashmir</p>
+                </div>
+                <div class="grid-item6">
+                    <p>Bangladesh</p>
+                </div>
+                <div class="grid-item7">
+                    <p>Bandarban</p>
+                </div>
+            </div>
+        </section>
+
+          <!-- Why Choose Us start -->
+          <section class="why-choose-us">
+            <h2>Why Choose Us</h2>
+            <p>Embark on a journey with TRav and let us transform your travel dreams into cherished memories. Discover
+                the world with confidence, knowing that every detail is meticulously curated to create an experience
+                that is uniquely yours. Choose us, and let the adventure begin!</p>
+            <div class="choose-card-container">
+                <div class="choose-items">
+                    <img src="assets/Images/hotel1.png" alt="">
+                    <h2>Handpicked Hotels</h2>
+                    <p>Every hotel in our handpicked selection is chosen with the utmost care, ensuring a commitment to
+                        quality and excellence. From luxurious resorts to boutique gems, we select accommodations that
+                        consistently deliver exceptional service, comfort, and attention to detail.</p>
+                </div>
+                <div class="choose-items">
+                    <img src="assets/Images/map.png" alt="">
+                    <h2>World Class Service</h2>
+                    <p>Experience the luxury of personalized service tailored to your unique preferences. Our dedicated
+                        team of professionals takes the time to understand your needs, ensuring that every aspect of
+                        your journey is crafted to perfection.</p>
+                </div>
+                <div class="choose-items">
+                    <img src="assets/Images/price-tag.png" alt="">
+                    <h2>Best Price Guarantee</h2>
+                    <p>We believe in transparency. Our pricing is clear, concise, and free from hidden fees. What you
+                        see is what you get, allowing you to make informed decisions without any surprises.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Why Choose Us end -->
+
+        <!-- Deals And Discounts start -->
+        <section class="deals-discount">
+            <h1>Deals & Discounts</h1>
+            <p class="deals-title">Embark on affordable adventures with TRav. Our Deals & Discounts program is designed
+                to make your travel
+                dreams accessible, ensuring you create lasting memories without compromising your budget. Explore,
+                discover, and save with us because everyone deserves the joy of travel.</p>
+            <div class="deals-card-container">
+                <div class="deals-card-1">
+                    <div class="deals-card-content">
+                        <p>
+                            <i class="bi bi-stopwatch-fill"></i>3 days 4 night
+                            <i class="bi bi-people-fill"></i>4 days 5 night
+                            <i class="bi bi-geo-alt-fill"></i>2 days 3 night
+                        </p>
+                        <h3>FOREST HILL, UNITED KINGDOM</h3>
+                        <p>Forest Hill is primarily a residential area, known for its diverse housing options. You'll
+                            find a mix of Victorian and Edwardian houses, as well as more modern developments.</p>
+                        <h4>Price: $1300-$1500</h4>
+                        <button class="prmry-btn">Book Now</button>
                     </div>
                 </div>
-        </section>
-
-        <!-- Why Choose Us Section -->
-        <section class="why-choose-us">
-                 <div class="why-choose-us-header">
-                 <h2 class="prmry-heading">Why Choose Us</h2>
-                 <p class="prmry-description">Our agency is a trusted agency. We send the people in different places many years. Our experience are long time. <br> We hope we can services you for a long time.</p>
-            </div>
-            <div class="first-line">
-                <div class="hotel">
-                    <img src="Images/hotel 1.jpg" alt="">
-                    <h3 class="why-choose-us-heading">Handpicked Hotels</h3>
-                    <p class="prmry-description-none">
-                        Handpicked Hotels offers a curated collection of exquisite accommodations, ensuring a blend of luxury and personalized experiences. With a discerning eye for unique properties, each hotel is chosen for its distinct charm.</p>
+                <div class="deals-card-2">
+                    <div class="deals-card-content">
+                        <p>
+                            <i class="bi bi-stopwatch-fill"></i>3 days 4 night
+                            <i class="bi bi-people-fill"></i>4 days 5 night
+                            <i class="bi bi-geo-alt-fill"></i>2 days 3 night
+                        </p>
+                        <h3>MIAMI BEACH, FLORIDA</h3>
+                        <p>Miami Beach, located in Miami-Dade County, Florida, is a world-renowned destination known for
+                            its vibrant atmosphere, beautiful beaches, and iconic Art Deco architecture.</p>
+                        <h4>Price: $1500-$1900</h4>
+                        <button class="prmry-btn">Book Now</button>
+                    </div>
                 </div>
-                <div class="map">
-                    <img src="Images/map 1.jpg" alt="">
-                    <h3 class="why-choose-us-heading">World Class Service</h3>
-                    <p class="prmry-description-none">
-                        Experience world-class service that transcends expectations, where every detail is meticulously attended to. Our commitment to excellence ensures a seamless and memorable journey for every guest. </p>
-                </div>    
-            </div>
-            <div class="price">
-                <img class="price-img" src="Images/price-tag 1.jpg" alt="">
-                <h3 class="why-choose-us-heading">Best Price Guarantee</h3>
-                <p class="prmry-description-none">Our Best Price Guarantee ensures you receive the most competitive rates for your <br> accommodations. If you find a lower price elsewhere, we promise to match it</p>
-            </div>
-        </section>
-
-        <!-- Deals and Discount section -->
-
-        <section class="deals-container">
-            <div class="deals-header">
-                <h2 class="prmry-heading">Deals & Discounts</h2>
-                <p class="prmry-description">Our Best Deals and Discounts ensures you receive the most competitive rates for your <br> accommodations. If you find a lower price elsewhere, we promise to match it</p>
-            </div>
-            <div class="deals-img">
-                <img src="Images/Group 39.png" alt="">
-                <img src="Images/Group 40.png" alt="">
-                <img src="Images/Group 39.png" alt="">
-            </div>
-
-        </section>
-
-        <!-- A Simple Perfect Place To Get Lost Section -->
-
-
-        <section class="a-simple-perfect">
-            <div class="simple-dsecription">
-                <h2 class="prmry-heading">A Simple Perfect Place <br> To Get Lost</h2>
-                <p class="prmry-description">Bandarban, with its breathtaking landscapes and serene ambiance, embodies the essence of <br> "A Simple Perfect Place To Get Lost." Surrounded by lush hills</p>
-                <ul class="simple-list">
-                    <li>Nafakhum Waterfall: Among the largest waterfalls in Bangladesh, Nafakhum cascades down a lush green hill.</li>
-                    <br> 
-                    <li>Nilgiri Hills: Known for its panoramic views, Nilgiri provides a stunning vantage point to witness the surrounding valleys and hills.</li>
-                </ul>
-                <input class="prmry-btn" type="button" value="See More">
-            </div>
-            <div class="simple-video">
-                <iframe width="500" height="340" src="https://www.youtube.com/embed/1heeXKUAFyA?si=27E4Mwxr0LIJOXn1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="deals-card-3">
+                    <div class="deals-card-content">
+                        <p>
+                            <i class="bi bi-stopwatch-fill"></i>3 days 4 night
+                            <i class="bi bi-people-fill"></i>4 days 5 night
+                            <i class="bi bi-geo-alt-fill"></i>2 days 3 night
+                        </p>
+                        <h3>GURUKUL TEMPLE, INDIA</h3>
+                        <p>It is based on the belief that the guru is the source of knowledge and the students should be
+                            in close proximity to the guru in order to receive the best education.</p>
+                        <h4>Price: $1000-$1200</h4>
+                        <button class="prmry-btn">Book Now</button>
+                    </div>
+                </div>
             </div>
         </section>
+        <!-- Deals And Discounts end -->
+
+       <!-- Simple Perfect Place To Get Lost start -->
+       <section class="simple-perfect-place">
+        <div class="perfect-place-content">
+            <h2>A Simple Perfect Place <br> To Get Lost</h2>
+            <p>Welcome to "Serenity Alpines," a simple perfect place to get lost in the heart of Switzerland. Tucked
+                away in the embrace of the majestic Swiss Alps, this haven offers a retreat for those seeking solace
+                and serenity.</p>
+            <ul>
+                <li>As you ascend the winding roads that cut through the evergreen mountains, a panorama of
+                    snow-capped peaks and lush valleys unfolds before you.</li>
+                <li>Serenity Alpines is a symphony of nature's wonders. Alpine meadows, adorned with a riot of
+                    wildflowers, stretch out in all directions. </li>
+            </ul>
+            <button class="prym">See More</button>
+        </div>
+        <div class="perfect-place-video">
+            <h3>Beach in Switzerland</h3>
+            <video src="Images/Bird's Eye View of Ocean Waves · Free Stock Video.mp4" controls autoplay loop width="100%"></video>
+        </div>
+    </section>
+
+
+    <!-- Simple Perfect Place To Get Lost end -->
+
 
         <!-- Newsletter Section -->
 
