repair the website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header-container">
         <nav class="heading">
-            <img src="Images/Group 40071 (2).png" alt="">
+            <img src="/Images/Group 40071 (2).png" alt="">
             <h1>Zoo <span class="prmry-color">Travel</span></h1>
         </nav>
         <nav class="heading-links">
